getting save itineraries to work and tweaking css

--- a/api/db.json.example
+++ b/api/db.json.example
@@ -1,304 +1,3 @@
 {
-	"itineraries": [
-		{
-			"id": 1,
-			"name": "Charles Wheels in the Park",
-			"park": {
-        "id": "E4C7784E-66A0-4D44-87D0-3E072F5FEF43",
-        "url": "https://www.nps.gov/adam/index.htm",
-        "fullName": "Adams National Historical Park",
-        "parkCode": "adam",
-        "description": "From the sweet little farm at the foot of Penn’s Hill to the gentleman’s country estate at Peace field, Adams National Historical Park is the story of “heroes, statesman, philosophers … and learned women” whose ideas and actions helped to transform thirteen disparate colonies into one united nation.",
-        "latitude": "42.2553961",
-        "longitude": "-71.01160356",
-        "latLong": "lat:42.2553961, long:-71.01160356",
-        "activities": [
-          {
-            "id": "B33DC9B6-0B7D-4322-BAD7-A13A34C584A3",
-            "name": "Guided Tours"
-          },
-          {
-            "id": "B204DE60-5A24-43DD-8902-C81625A09A74",
-            "name": "Living History"
-          },
-          {
-            "id": "28880A5B-3D29-41AC-BD8B-24743E7A070F",
-            "name": "First Person Interpretation"
-          },
-          {
-            "id": "0C0D142F-06B5-4BE1-8B44-491B90F93DEB",
-            "name": "Park Film"
-          },
-          {
-            "id": "24380E3F-AD9D-4E38-BF13-C8EEB21893E7",
-            "name": "Shopping"
-          },
-          {
-            "id": "467DC8B8-0B7D-436D-A026-80A22358F615",
-            "name": "Bookstore and Park Store"
-          }
-        ],
-        "topics": [
-          {
-            "id": "F3883A66-A7CB-461B-868E-1B5932224B25",
-            "name": "American Revolution"
-          },
-          {
-            "id": "7DA81DAB-5045-4953-9C20-36590AD9FA95",
-            "name": "Women's History"
-          }
-        ],
-        "states": "MA",
-        "contacts": {
-          "phoneNumbers": [
-            {
-              "phoneNumber": "617-770-1175",
-              "description": "",
-              "extension": "",
-              "type": "Voice"
-            }
-          ],
-          "emailAddresses": [
-            {
-              "description": "",
-              "emailAddress": "ADAM_Visitor_Center@nps.gov"
-            }
-          ]
-        },
-        "entranceFees": [
-          {
-            "cost": "15.00",
-            "description": "The entrance fee is for all visitors age 16 and older.  Children under 16 are free. Credit or Debit Card only.",
-            "title": "Individual Entrance Fee"
-          }
-        ],
-        "entrancePasses": [],
-        "fees": [],
-        "directionsInfo": "Traveling on U.S. Interstate 93, take exit 7 - Route 3 South to Braintree and Cape Cod. Take the first exit off Route 3 south - exit 19 - and follow signs toward Quincy Center. Continue straight on Burgin Parkway through six traffic lights. At the seventh traffic light, turn right onto Dimmock Street. Follow Dimmock Street one block and turn right onto Hancock Street. The National Park Service Visitor Center, located at 1250 Hancock Street on your left. Validated parking is in the garage to the rear.",
-        "directionsUrl": "http://www.nps.gov/adam/planyourvisit/directions.htm",
-        "operatingHours": [
-          {
-            "exceptions": [
-              {
-                "exceptionHours": {
-                  "wednesday": "Closed",
-                  "monday": "Closed",
-                  "thursday": "Closed",
-                  "sunday": "Closed",
-                  "tuesday": "Closed",
-                  "friday": "Closed",
-                  "saturday": "Closed"
-                },
-                "startDate": "2022-01-01",
-                "name": "New Year's Day",
-                "endDate": "2022-01-01"
-              },
-              {
-                "exceptionHours": {
-                  "wednesday": "Closed",
-                  "monday": "Closed",
-                  "thursday": "Closed",
-                  "sunday": "Closed",
-                  "tuesday": "Closed",
-                  "friday": "Closed",
-                  "saturday": "Closed"
-                },
-                "startDate": "2022-01-18",
-                "name": "Birthday of Martin Luther King, Jr.",
-                "endDate": "2022-01-18"
-              },
-              {
-                "exceptionHours": {
-                  "wednesday": "Closed",
-                  "monday": "Closed",
-                  "thursday": "Closed",
-                  "sunday": "Closed",
-                  "tuesday": "Closed",
-                  "friday": "Closed",
-                  "saturday": "Closed"
-                },
-                "startDate": "2022-02-15",
-                "name": "Presidents' Day",
-                "endDate": "2022-02-15"
-              },
-              {
-                "exceptionHours": {
-                  "wednesday": "Closed",
-                  "monday": "Closed",
-                  "thursday": "Closed",
-                  "sunday": "Closed",
-                  "tuesday": "Closed",
-                  "friday": "Closed",
-                  "saturday": "Closed"
-                },
-                "startDate": "2021-03-17",
-                "name": "Closed Due to COVID-19",
-                "endDate": "2021-12-31"
-              },
-              {
-                "exceptionHours": {
-                  "wednesday": "Closed",
-                  "monday": "Closed",
-                  "thursday": "Closed",
-                  "sunday": "Closed",
-                  "tuesday": "Closed",
-                  "friday": "Closed",
-                  "saturday": "Closed"
-                },
-                "startDate": "2021-11-11",
-                "name": "Veterans Day",
-                "endDate": "2021-11-11"
-              },
-              {
-                "exceptionHours": {
-                  "wednesday": "Closed",
-                  "monday": "Closed",
-                  "thursday": "Closed",
-                  "sunday": "Closed",
-                  "tuesday": "Closed",
-                  "friday": "Closed",
-                  "saturday": "Closed"
-                },
-                "startDate": "2021-11-25",
-                "name": "Thanksgiving Day",
-                "endDate": "2021-11-25"
-              },
-              {
-                "exceptionHours": {
-                  "wednesday": "Closed",
-                  "monday": "Closed",
-                  "thursday": "Closed",
-                  "sunday": "Closed",
-                  "tuesday": "Closed",
-                  "friday": "Closed",
-                  "saturday": "Closed"
-                },
-                "startDate": "2021-12-25",
-                "name": "Christmas Day",
-                "endDate": "2021-12-25"
-              }
-            ],
-            "description": "The historic homes are open from May 1 through October 31.  The first guided tour leaves the Visitor Center at 9:15 a.m. and the last guided tour leaves the Visitor Center at 3:15 p.m.  Please allow two and a half hours for each guided tour.",
-            "standardHours": {
-              "wednesday": "9:00AM - 5:00PM",
-              "monday": "9:00AM - 5:00PM",
-              "thursday": "9:00AM - 5:00PM",
-              "sunday": "9:00AM - 5:00PM",
-              "tuesday": "9:00AM - 5:00PM",
-              "friday": "9:00AM - 5:00PM",
-              "saturday": "9:00AM - 5:00PM"
-            },
-            "name": "Visiting the Historic Homes"
-          }
-        ],
-        "addresses": [
-          {
-            "postalCode": "02169",
-            "city": "Quincy",
-            "stateCode": "MA",
-            "line1": "1250 Hancock Street",
-            "type": "Physical",
-            "line3": "",
-            "line2": ""
-          },
-          {
-            "postalCode": "02169",
-            "city": "Quincy",
-            "stateCode": "MA",
-            "line1": "135 Adams Street",
-            "type": "Mailing",
-            "line3": "",
-            "line2": ""
-          }
-        ],
-        "images": [
-          {
-            "credit": "NPS Photo",
-            "title": "The John and John Quincy Adams Birthplaces",
-            "altText": "The Birthplaces of Presidents John Adams (right) and John Quincy Adams (left)",
-            "caption": "The Birthplaces of John and John Quincy Adams sit right next  to each other on Franklin Street.",
-            "url": "https://www.nps.gov/common/uploads/structured_data/3C7C7416-1DD8-B71B-0B1B30D0827F7C74.jpg"
-          },
-          {
-            "credit": "NPS Photo",
-            "title": "The Birthplace of John Adams",
-            "altText": "The Birthplace of John Adams",
-            "caption": "The house where President John Adams was born in 1735.",
-            "url": "https://www.nps.gov/common/uploads/structured_data/3C7C7565-1DD8-B71B-0BEC729A3E865792.jpg"
-          },
-          {
-            "credit": "NPS Photo",
-            "title": "The Birthplace of John Quincy Adams",
-            "altText": "The Birthplace of John Quincy Adams",
-            "caption": "The house where President John Quincy Adams was born in 1767.",
-            "url": "https://www.nps.gov/common/uploads/structured_data/3C7C76BE-1DD8-B71B-0B6DFACFB45AC5A4.jpg"
-          },
-          {
-            "credit": "NPS Photo",
-            "title": "Old House at Peace field",
-            "altText": "A view of Old House at Peace field",
-            "caption": "Old House at Peace field, where four generations of the Adams family lived from 1788 to 1927.",
-            "url": "https://www.nps.gov/common/uploads/structured_data/3C7C780E-1DD8-B71B-0B18B8DB9F39704F.jpg"
-          },
-          {
-            "credit": "NPS Photo / Betty Brown",
-            "title": "The Paneled Room",
-            "altText": "The Paneled Room located inside Old House at Peace field.",
-            "caption": "The Paneled Room greets everyone who enters Old House at Peace field.",
-            "url": "https://www.nps.gov/common/uploads/structured_data/3C7C7945-1DD8-B71B-0BE14B48DD78B777.jpg"
-          },
-          {
-            "credit": "NPS Photo",
-            "title": "The Stone Library",
-            "altText": "The Stone Library located outside Old House at Peace field.",
-            "caption": "The Stone Library houses up to 14,000 books belonging to the Adams family.",
-            "url": "https://www.nps.gov/common/uploads/structured_data/3C7C7A77-1DD8-B71B-0BDA92321AD899C5.jpg"
-          },
-          {
-            "credit": "NPS Photo",
-            "title": "Inside the Stone Library",
-            "altText": "Inside the Stone Library",
-            "caption": "A view into the Stone Library",
-            "url": "https://www.nps.gov/common/uploads/structured_data/3C7C7BE3-1DD8-B71B-0B864F7398605B7E.jpg"
-          },
-          {
-            "credit": "NPS Photo",
-            "title": "The Gardens Located at Old House at Peace field",
-            "altText": "The gardens located at Old House at Peace field.",
-            "caption": "The gardens located by Old House at Peace field bloom in every color you can imagine.",
-            "url": "https://www.nps.gov/common/uploads/structured_data/3C7C7D4E-1DD8-B71B-0B48B5CDE41703D7.jpg"
-          }
-        ],
-        "weatherInfo": "Be prepared for hot, humid weather. The historic homes are not air conditioned. While the visitor center remains open all year, the historic homes are closed from November 1 through April 30.",
-        "name": "Adams",
-        "designation": "National Historical Park"
-      },
-			"eatery":{
-        "businessName": "Hudson's Hamburgers",
-        "description": "Burgers and fries. That's the all-American meal. And you can't get it at Hudson's, because it doesn't serve fries. But you can get a burger -- top it with hot mustard and spicy ketchup, if you know what's good for you -- with a side of a few different pies, if you want. There's a lunch counter that fits about 20, and it's packed every day at lunch. Squeeze yourself into a seat at the counter and have a double cheeseburger, a slice of chocolate pie, and a fountain drink. You won't miss the fries. Besides, you can get fries anywhere, so their absence will force you to focus on the deliciousness of everything else on your plate.",
-        "state": "ID",
-        "city": "Coeur d'Alene",
-        "id": 14,
-        "ameneties": {
-            "wheelchairAccessible": false,
-            "petFriendly": false,
-            "wifi": false,
-            "diaperFacility": true,
-            "playground": false,
-            "restrooms": true
-        }
-    },
-			"bizarre":{ 
-        "id": 12,
-        "name": "World’s Most Scenic Urinal",
-        "state": "HI",
-        "city": "Kealakekua",
-        "description": "The Hotel Kona is home to the world’s most scenic urinal and they are proud of it. Men using the facilities get to enjoy a gorgeous view of the ocean and the green terrain while they relieve themselves.",
-        "ameneties": {
-            "souvenirs": false,
-            "restrooms": true
-        }
-    }
-		}
-	]
+	"itineraries": []
 }
